--- a/elearning-core/css/default.css.template
+++ b/elearning-core/css/default.css.template
@@ -7,7 +7,21 @@ body {
     height: 100%;
     flex-direction: column
 }
-
+#skip a
+{
+position:absolute;
+left:-10000px;
+top:auto;
+width:1px;
+height:1px;
+overflow:hidden;
+}
+#skip a:focus
+{
+position:static;
+width:auto;
+height:auto;
+}
 .page-content {
     flex: 1 0 auto
 }
@@ -1795,7 +1809,7 @@ span.freeshipping {
     }
 }
 
-.products-section h2,.category-header h2 {
+.products-section h2,.category-header h2,.products-section h1 {
     display: block;
     font-family: roboto slab,serif;
     background: 0 0;
@@ -1811,7 +1825,7 @@ span.freeshipping {
     position: relative
 }
 
-.products-section h2:before,.category-header h2:before {
+.products-section h2:before,.category-header h2:before,.products-section h1:before {
     content: '';
     display: block;
     border-top: double #ccc;
@@ -1823,13 +1837,13 @@ span.freeshipping {
     z-index: -1
 }
 
-.products-section h2 span,.category-header h2 span {
+.products-section h2 span,.category-header h2 span,.products-section h1 span {
     padding: 0 12px;
     background: #fff
 }
 
 @media(max-width: 991px) {
-    .products-section h2 {
+    .products-section h2,.products-section h1 {
         font-size:36px
     }
 }
@@ -2109,12 +2123,12 @@ span.freeshipping {
         max-height: 98%
     }
 
-    .products-section h2,.home-page-content .category-header h3 {
+    .products-section h2,.home-page-content .category-header h3,.products-section h1 {
         font-size: 24px;
         margin-bottom: 15px
     }
 
-    .products-section h2 span,.home-page-content .category-header h3 span {
+    .products-section h2 span,.home-page-content .category-header h3 span,.products-section h1 span {
     }
 
     .searchBox {
